<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/blur_bg">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/box_popup"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/closeSettingsPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="-12dp"
                android:layout_marginTop="-12dp"
                android:backgroundTint="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/close_button"
                app:tint="@color/txtColor"/>

            <TextView
                android:id="@+id/settingsPopupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/settingsPopupDiff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty"
            android:textSize="20sp"/>



        <RadioGroup
            android:checkedButton="@+id/hard"
            android:id="@+id/difficultyToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/toggle_outline"
            android:orientation="horizontal">

            <RadioButton
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:id="@+id/easy"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/txtcolorbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/easy"
                android:textSize="20sp"
                android:padding="10dp" />

            <RadioButton
                android:layout_marginEnd="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_bg"
                android:textColor="@drawable/txtcolorbtn"

                android:button="@null"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/hard"
                android:textSize="20sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/settingsPopupDiffHelp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/settingsDiffHelp"
            android:textSize="16sp" />




    </LinearLayout>
</LinearLayout>